Add approval workflow and analytics backend with PostgreSQL integration

--- a/backend/.env
+++ b/backend/.env
@@ -9,9 +9,9 @@ NODE_ENV=development
 # ================================
 DB_HOST=localhost
 DB_PORT=5432
-DB_NAME=new_tool_db
+DB_NAME=esg_dashboard
 DB_USER=postgres
-DB_PASSWORD=Strong123
+DB_PASSWORD=admin
 
 # ================================
 # Security
