--- a/backend/.env
+++ b/backend/.env
@@ -5,13 +5,13 @@ PORT=5000
 NODE_ENV=development
 
 # ================================
-# PostgreSQL Database (MAIN DB)
+# PostgreSQL Database
 # ================================
 DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=new_tool_db
 DB_USER=postgres
-DB_PASSWORD=Strong123 
+DB_PASSWORD=Strong123
 
 # ================================
 # Security
